   - Restore assistant let the user display the metadata of the archive (todo #1450).
   - User may choose display at startup, and when a dossier is opened or closed.

 Bug fixes:

   - configure.ac: display 'pwirender' plugin build status (todo #1453).
   - ofaEntryPage: fix initial display of the extended filter (todo #1464).
   - ofaEntryStore: fix ENT_TIERS column type.
   - ofaGuidedInputBin: do not override a user-set date when setting a template (todo #1456).
   - ofaHub: fix releasing object with floating references. 
   - ofaMainWindow: better switch back from 'minimal' display mode.
   - Fix conversion to DBModel v37 of OFA_T_BAT table.
   - ofaRecurrentRunTreeview: fix refresh bug when cancelling operations.
   - ofoEntry: fix export format for unset counters.

 Other changes:

   - my_utils_window_position_get(): new function.
   - ofaAccountBalance: new (computing) class which implements ofaIExportable.
   - ofaBackupDisplay: new class.
   - ofaIExportable::get_basename(): new method.
   - ofaIExportable::get_published(): new method.
   - ofaIExporter: new interface.
   - ofaIRenderer: interface is completed with font and color getters (todo #1452).
   - ofaRecurrentModelPage: precise the action label (todo #1458).
   - ofaRenderArea: new class which implements ofaIContext. 
   - ofaStreamFormat: is now able to define which fields are user-updatable.
   - ofaTVBin: is now exportable (for now only implemented in ofaEntryPage).
   - core/ofo-entry-fec.{c,h}: new files.

-----------------------------------------------------------------------
 Version 0.69
 ============

 Released on 2017-04-11

 Total files count:    836 files
 Total lines count: 565028 lines
 maintainer/run-distcheck.sh: real	6m7.099s

 New features and improvements:

   Core DB Model v37
   VAT DB Model v9

   - AccountsBalance: new with beginning and ending soldes (todo #1385).
   - AccountsBookSummary: have balance and page break by class (todo #1390). 